fixed menu modals apearance on mobile

--- a/front/src/styles/MenuProjectListDesktop.module.css
+++ b/front/src/styles/MenuProjectListDesktop.module.css
@@ -2,27 +2,30 @@
     box-sizing: border-box;
 }
 
-.menuProjectPopUp{
-    border-radius: 50px;
-    /* min-width: 360px; */
-}
-
 .projectPopUp {
-    min-width: 22.5rem;
+    width: 21rem;
     display: flex;
     flex-direction: column;
     min-height: 15rem;
-    height: 80vh;
     margin-top: 27px;
-    /* justify-content: center; */
+}
+.projectPopUp .modal-dialog {
+    width: 20rem;
+}
+.menuProjectPopUp{
+    width: 2rem;
 }
 
 .homeIcon {
     border-bottom: 1px solid #d8d8d8;
+    /* width: 100vh; */
     color: #565656;
     display: flex;
     justify-content: space-between;
     margin-bottom: 1.12rem;
+    margin-left: -1rem;
+    padding-left:1rem ;
+    margin-top: -1rem;
     /* width: 100%; */
 }
 
@@ -56,8 +59,9 @@
 .closeButton {
     border: none;
     background: none;
-    margin-top: -4.5rem;
+    margin-top: -3rem;
     color: #565656;
+    margin-right: 0.2rem;
 }
 
 .searchThing {
@@ -109,8 +113,12 @@
 
 @media screen and (min-width: 768px) {
     .projectPopUp {
+         width: 25rem; 
         min-height: 20rem;
-        min-width: 22.5rem; 
+       
+      }
+      .closeButton{
+        margin-right: 1rem;
       }
 }
 
